# data_commentator

./: .gitignore  README.md  config.toml.sample  pyproject.toml  requirements.txt
src/data_commentator/: __init__.py  args.py  collector_server.py  dummy.py  loader.py  priority.py  types.py  utterance_server.py  webserver.py
src/data_commentator/async_server/: __init__.py  call_server.py  process_server.py  thread_server.py
src/data_commentator/data_source_server/: __init__.py  jsonlreader.py  webserver.py
src/data_commentator/speaker/: __init__.py  simpleaudio.py  web_overlay.py
src/data_commentator/synthesizer/: __init__.py  marytts.py  openjtalk.py  piper.py  voicevox.py
umamusume/: Dockerfile  api.py
