[project]
name = "data_commentator"
version = "0.0.1"
authors = [
  { name="Goran Topić", email="amadanmath@gmail.com" },
]
description = "Framework for data stream commentary"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/amadanmath/data_commentator"
Issues = "https://github.com/amadanmath/data_commentator/issues"

[project.scripts]
data-commentator = "data_commentator:main"

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.basedpyright]
reportAny = false
reportImplicitOverride = false
